WhiteHW/Week1/dec2bin/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:07:54 **** Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
00:08:02 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:12:32 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
00:12:57 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
00:12:59 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:13:16 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:13:22 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:13:28 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:13:32 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:13:38 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
00:14:02 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
00:16:19 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
00:16:22 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:05:45 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
../src/dec2bin.cpp:8:2: error: unknown type name 'vector'; did you mean 'hecto'?
        vector s;
        ^~~~~~
        hecto
/Library/Developer/CommandLineTools/usr/include/c++/v1/ratio:283:43: note: 'hecto' declared here
typedef ratio<                100LL, 1LL> hecto;
                                          ^
../src/dec2bin.cpp:11:6: error: no viable overloaded '+='
                        s += "1";
                        ~ ^  ~~~
../src/dec2bin.cpp:14:5: error: no viable overloaded '+='
                        s+= "0";
                        ~^  ~~~
../src/dec2bin.cpp:18:4: error: no viable overloaded '+='
        s += "1";
        ~ ^  ~~~
4 errors generated.
make: *** [src/dec2bin.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
01:06:51 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
01:08:45 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
Building file: ../src/dec2bin.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/dec2bin.d" -MT"src/dec2bin.o" -o "src/dec2bin.o" "../src/dec2bin.cpp"
Finished building: ../src/dec2bin.cpp
 
Building target: dec2bin
Invoking: MacOS X C++ Linker
g++  -o "dec2bin"  ./src/dec2bin.o   
Finished building target: dec2bin
 
01:08:47 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:08:54 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:08:59 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:18:56 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:19:28 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:19:30 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:41 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:45 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:52 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:54 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:56 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:20:57 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:02 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:03 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:05 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:10 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:18 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:19 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:26 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:21:27 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:22:16 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:22:18 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:22:19 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:22:22 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:23:09 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:23:16 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:23:21 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
01:23:24 **** Incremental Build of configuration Debug for project dec2bin ****
make all 
make: Nothing to be done for `all'.
